--- a/.env
+++ b/.env
@@ -1,11 +1,15 @@
-BASE_URL=https://uc.ira-ds-sj.ucprem.voicemeetme.com:9443
+
+
+
+
+BASE_URL=https://uc.ira-ds-du.ucprem.voicemeetme.com:9443
 AGENT_STATUS_ENDPOINT=/api/v2/reports/callcenter/agents/stats
-ACCOUNT_ID_HEADER=0fb79b416974acf4a725e17e8c019d4d
+ACCOUNT_ID_HEADER=e16737db698d2ff469956b77a17a7c62
 API_USERNAME=ayan@multycomm.com
 API_PASSWORD=WELcome@123
 
-PORT=9798
+PORT=9750
 HOST=0.0.0.0
-# PUBLIC_URL=http://localhost:9798
+PUBLIC_URL=http://localhost:9750
 
 # PUBLIC_URL=http://ds.reports.voicemeetme.net:9798
